2014-11-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Fix leak of handle when starting a new
	connection after an older one is dropped by the remote end.

2014-10-30  Sergei Golovin <Golovin.SV@gmail.com>

	* Source/NSURLProtocol.m: Fix memory leak and possible hang on retry
	(bug #43461).

2014-10-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/news.texi:
	* Documentation/ReleaseNotes.gsdoc:
	* Version: Bump subminor version for bugfix release
	* NSTimeZones/NSTimeZones.tar: update
	* Source/NSProcessInfo.m: Use separate lock for globally unique
	string rather than sharing lock intended for other purposes.
	* Source/GSTLS.m: Change default TLS 'priority' to disable SSLv3.0
	as it renders things open to the 'POODLE' attack.
	Also, print warning if it is expressly requested from the code
	(though the use of the GSTLSPriority user default will still
	allow complete control without warnings).

2014-10-11  Marcus Mueller <znek@mulle-kybernetik.com>

	* Headers/GNUstepBase/GSVersionMacros.h: UNAVAILABLE_ATTRIBUTE added

2014-08-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac:
	* Headers/GNUstepBase/config.h.in: Add test for grantpt function.

	* configure: Regenerated.

2014-07-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Tools/gdomap.c: Unless running on windows, allow new -j
	command-line argument to specify the path in which the process should
	be jailed (chroot).  The default remains to jail the process in /tmp
	since there doesn't seem to be a general, portable alternative.

2014-07-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: Fix handling TLS handshake in the case
	where there is a network failure during the handshake (bug#42781).
	* Source/GSTLS.m: Fix erroneous attempt to load revocation lists.
	* Tests/base/NSURLConnection/test01.m: https test contributed by
	Sergei Golovin.

2014-07-25  Richard Frith-Macdonald <rfm@gnu.org>
